IssueId #0000 sentence is coming out of box in spell and check

--- a/src/pages/Test-Rig-Two/Story/SpellAndCheck.css
+++ b/src/pages/Test-Rig-Two/Story/SpellAndCheck.css
@@ -47,7 +47,7 @@
   margin-right: 10px;
   border: 2px solid #3498db;
   border-radius: 8px;
-  width: 80px;
+  min-width: 80px;
   height: 80px;
   background-color: #ecf0f1;
   color: #333;
